[master] templatectl complained about non string vals in project.json
Signed-off-by: 4thel00z <4thel00z@gmail.com>

--- a/project.json
+++ b/project.json
@@ -2,5 +2,5 @@
     "Name": "",
     "Layout": "layouts/post.njk",
     "Categories": "security",
-    "Comments": false
+    "Comments": "false"
 }
